[package]
name = "qutex"
version = "0.0.6"
authors = ["Nick Sanders <cogciprocate@gmail.com>"]
license = "MIT"
description = """\
	Synchronization mechanisms that rely on lock-free and other \
	non-(thread)blocking techniques, such as Rust futures, to guarantee \
	mutually exclusive or shared exclusive access to data."""
documentation = "https://docs.rs/qutex"
homepage = "https://github.com/cogciprocate/qutex"
repository = "https://github.com/cogciprocate/qutex"
readme = "README.md"
keywords = ["futures", "mutex", "lock", "rwlock", "async", "data-structures", "data-structure", 
	"queue", "container", "concurrency"]
categories = ["Asynchronous", "Concurrency", "Data structures"]

[dependencies]
crossbeam = "0.2"
futures = "0.1"