[package]
name = "qutex"
version = "0.2.6"
authors = ["Nick Sanders <cogciprocate@gmail.com>"]
license = "MIT"
description = """\
	Synchronization mechanisms that rely on lock-free and other \
	non-(thread)blocking techniques, such as Rust futures, to guarantee \
	mutually exclusive or shared exclusive access to data."""
documentation = "https://docs.rs/qutex"
homepage = "https://github.com/cogciprocate/qutex"
repository = "https://github.com/cogciprocate/qutex"
readme = "README.md"
keywords = ["futures", "async", "data-structures", "mutex", "lock"]
categories = ["asynchronous", "concurrency", "data-structures"]
edition = "2021"

[features]
default = []
async_await = ["futures03"]

[dependencies]
crossbeam = "0.8"
futures = "0.1"

[dependencies.futures03]
package = "futures-preview"
version = "0.3.0-alpha.14"
features = ["compat"]
optional = true

